replace hencoder ad image

--- a/index.html
+++ b/index.html
@@ -178,118 +178,9 @@
         <div class="ad-float-right">
             <a href="https://plus.hencoder.com" title="用碎片化的时间，学习系统化内容；短期暴力提升，快速突破瓶颈。HenCoder Plus 作为一套全方位系统化的在线直播课程，开课两期以来，吸纳了来自 BAT、头条、滴滴等公司以及硅谷、台湾和日本的众多学员报名参加，并且众多学员在毕业一个月内先后入职阿里、腾讯、小米、头条等公司。其中一位学员拿到 80w+ 的年薪，多位学员年薪达到 45w 左右。" onclick="trackOutboundLink('https://plus.hencoder.com', 'AD-HenCoderPlus', 'click');"
                 target="_blank">
-                <img src="https://i.loli.net/2019/04/29/5cc673747088f.jpg" style="height: 313.5px; width: 192.5px;">
+                <img src="https://i.loli.net/2019/05/23/5ce60190c10df48164.gif" style="height: 313.5px; width: 192.5px;">
             </a>
         </div>
-        <!-- <div class="ad-float-right hide">
-            <a href="https://promotion.aliyun.com/ntms/act/vmpt/aliyun-group/home.html?userCode=j7dufdfe&utm_source=androiddevtools.cn&utm_medium=website-rightbar" title="【全民云计算升级】拼团上云更优惠，拉1人拼团，云服务器立享￥234" target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fweuai7fnij303k03kt9c.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg" title="TensorFlow 官方微信公众号" onclick="trackOutboundLink('https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg', 'AD-TensorFlow-Wechat-QRCode', 'click');" target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fml2ip3fa1j303m03mgll.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://candy.one/i/984155" title="多种数字货币年终糖果大礼包注册即送 100 个糖果！" onclick="trackOutboundLink('https://candy.one/i/565706', 'AD-Candy', 'click');" target="_blank">
-                <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fnpgfyl7wmj303m064gm7.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://t.cn/RdPqSOM" title="「腾讯云云服务器1核2G云服务器+50G对象存储， 10元/月，买1年送4个月。同时还能以10元/月的价格续费2次，每次续费最长1年 相当于是360元买40个月。 买完后还能开车：推荐上车1人送2个月，上车4人送9个月，最长40个月，还等啥，快上车!!!" onclick="trackOutboundLink('https://t.cn/RdPqSOM', 'AD-Tecnet-Cloud', 'click');" target="_blank">
-                <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe" title="全民云计算 爆款云服务器低至 2 折，1 核 1G ¥ 293元/年" onclick="trackOutboundLink('https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe', 'AD-Aliyun-cloud-host-2', 'click');"
-                target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb2m2t9jqj308w0bvt93.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://t.cn/EZrQEPS" title="巅峰钜惠 拼你喜欢】阿里云双 11 组团云主机仅 99.5 元" onclick="trackOutboundLink('http://t.cn/EZrQEPS', 'AD-Aliyun-team-1111', 'click');" target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwsv2tscxwj30780bmmy1.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://u.jd.com/41FO0r" title="昼短夜长 正好读书每满 100 减 40" onclick="trackOutboundLink('https://u.jd.com/41FO0r', 'AD-JD-Books-200-100', 'click');" target="_blank">
-                <img src="https://ws3.sinaimg.cn/large/006tNbRwly1fx5c24d915j30780bmwfk.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://s.click.taobao.com/gP0xvKw" title="" onclick="trackOutboundLink('https://s.click.taobao.com/gP0xvKw', 'AD-Tmall-1111-Red-Packet', 'click');" target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwn5gssu4hj30780bmaal.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://gk.link/a/102a3" title="丁雪丰--平安壹钱包高级架构师、《Spring Boot 实战》和《Spring 攻略》译者，带你玩转 Spring 全家桶，一站通关 Spring、Spring Boot 与 Spring Cloud。" onclick="trackOutboundLink('http://gk.link/a/102a3', 'AD-GeekTime-Play-Spring-Bucket', 'click');" target="_blank">
-                <img src="https://ws3.sinaimg.cn/large/006tNc79ly1g03fvn1y10j30u01hdadf.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://time.geekbang.org/column/intro/142?code=CzZyMVt9D2DFD9KOOd%2FHWWCts5PGI7cAMhV4MJerI6c%3D" title="Android 开发高手课-前微信高级工程师、Tinker 负责人授课，扫码订阅返 8 元" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/142?code=CzZyMVt9D2DFD9KOOd%2FHWWCts5PGI7cAMhV4MJerI6c%3D', 'AD-GeekTime-Android-Dev-Advanced', 'click');"
-                target="_blank">
-                <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fxmbeaw5wnj30eg0n8my9.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://gk.link/a/100XH" title="算法面试通关 40 讲-Sophon Tech 创始人、前 Facebook 工程师、卡内基梅隆大学计算机硕士带你吃透大厂面试题" onclick="trackOutboundLink('http://gk.link/a/100XH', 'AD-GeekTime-Algorithm-interview', 'click');" target="_blank">
-                <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fweuxmnii6j30780bmacb.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://stuq.com/a/100kM" title="深入拆解 Java 虚拟机" onclick="trackOutboundLink('http://stuq.com/a/100kM', 'AD-GeekTime-Deep-JVM', 'click');" target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNc79gy1ftdwsfqykyj30u01hcgor.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://stuq.com/a/100il" title="快速上手 Kotlin 开发" onclick="trackOutboundLink('http://stuq.com/a/100il', 'AD-GeekTime-Kotlin-dev', 'click');" target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tKfTcly1ft4p96uuquj30yi1pd1kx.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D" title="Oracle首席工程师带你修炼 Java 内功" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D', 'AD-JiKeShiJian-Java-Core-36', 'click');"
-                target="_blank">
-                <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fqxwpxb5d2j303m05tq3o.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="#" title="深入浅出区块链-陈浩／元界 CTO，主导并实现了中国第一条公有链，36 节课／5大模块／写出你的第一个区块链项目" onclick="trackOutboundLink('', 'AD-JiKeShiJian', 'click');" target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fpkkpcg8poj303m06f3yn.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://otcbtc.com/referrals/INFERJAY" title="扫码注册，领比特币红包，OTCBTC 最流畅、最靠谱、最好用的场外交易平台。" onclick="trackOutboundLink('https://otcbtc.com/referrals/INFERJAY', 'AD-OTCBTC-Redpacket', 'click');" target="_blank">
-                <img src="https://ws1.sinaimg.cn/large/006tNc79ly1fmvgx80nrej303m05tmxv.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="#" title="马老师发红包了，打开支付宝首页搜索“510669218” 立即领红包！天天可领，想花就花！" onclick="trackOutboundLink('alipayhongbao.com', 'AD-AliPay-HB', 'click');" target="_blank">
-                <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fxtxyxsjasj30fr0no762.jpg" style="height: 209px; width: 130px;">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="https://weidian.com/item.html?itemID=2189752818&amp;ifr=itemdetail&amp;wfr=androiddevtools&amp;from=click-right-float-sidebar" title="朋友家自己种的新鲜脆甜烟台大苹果🍎10斤/62元包邮，纯天然无公害，不打蜡" onclick="trackOutboundLink('https://weidian.com/item.html?itemID=2189752818', 'AD-YanTaiBigApple', 'click');"
-                target="_blank">
-                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fl65xenyvbj303m03mdgb.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="" title="脉脉不得语的公众号" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AD-Wechat-Me', 'click');" target="_blank">
-                <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fhw3x145mrj303m03mmx3.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://t.cn/RKtmj6v" title="遵循公约的应用，后台不费电、手机不卡顿，跟 iPhone 一样省心。" onclick="trackOutboundLink('http://t.cn/RKtmj6v', 'GreenAndroid', 'click');" target="_blank">
-                <img src="http://ws2.sinaimg.cn/large/006tKfTcly1fhw3x0z64zj303m03m0sm.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://t.cn/Ro1OZoN" title="Raspberry Pi 3 Model B 树莓派3代控制器 含系统卡 电源 散热片 保护外壳--奥松机器人RobotBase" onclick="trackOutboundLink('http://t.cn/Ro1OZoN', 'AD-Amazon-RaspberryPi-3-MB', 'click');" target="_blank">
-                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fhw3x0odfmj303m03m746.jpg">
-            </a>
-        </div> -->
     </div>
 
     <div class="banner has-dots" id="ad-banner-list">
