add lizhi 618 ad

--- a/index.html
+++ b/index.html
@@ -185,13 +185,20 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4dfb5f1a74.png); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/06/18/5d0842481578724529.png); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
+                <div class="inner">
+                    <h1></h1>
+                    <p style="color: darkgray"><br/><br/><br/></p>
+                    <a class="btn" href="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" onclick="trackOutboundLink('https://partner.lizhi.io/androiddevtools/cp', 'LiZhi-Button', 'click');" title="">去领劵</a>
+                </div>
+            </li>
+            <!-- <li class="hide" style="background-image: url(https://i.loli.net/2019/05/10/5cd4dfb5f1a74.png); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
                 <div class="inner">
                     <h1>众多精选正版软件</h1>
                     <p style="color: darkgray">买正版，售后好，三折起<br/><br/><br/></p>
                     <a class="btn" href="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" onclick="trackOutboundLink('https://partner.lizhi.io/androiddevtools/cp', 'LiZhi-Button', 'click');" title="">去领劵</a>
                 </div>
-            </li>
+            </li> -->
             <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4dff4e976e.png); width: 25%;" data-link="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-P-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Pie</h1>
@@ -199,14 +206,14 @@
                     <a class="btn" href="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('https://androidweekly.io/android-pie/', 'Android-P-Page', 'click');" title="">去看看</a>
                 </div>
             </li>
-            <li class="hide" style="background-image: url(https://i.loli.net/2019/05/10/5cd4e011ebea9.png); width: 25%;" data-link="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-Jetpack-li"
+            <!-- <li class="hide" style="background-image: url(https://i.loli.net/2019/05/10/5cd4e011ebea9.png); width: 25%;" data-link="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-Jetpack-li"
                 data-event-type="click">
                 <div class="inner">
                     <h1>Android Jetpack</h1>
                     <p style="color: darkgray">Android 软件组件的集合，使您更容易地开发优秀的 Android 应用程序。</p>
                     <a class="btn" href="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('https://developer.android.google.cn/jetpack/', 'Android-Jetpack-Page', 'click');" title="">去试试</a>
                 </div>
-            </li>
+            </li> -->
             <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4e030e1e64.png); width: 25%;" data-link="http://www.androidweekly.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="AndroidWeekly-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 开发技术周报</h1>
