add lizhi 618 ad

--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(https://i.loli.net/2019/06/18/5d0842481578724529.png); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/06/18/5d0842481578724529.png); width: 25%;" data-link="https://www.androiddevtools/ad/lizhi-618.html?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
                 <div class="inner">
                     <h1></h1>
                     <p style="color: darkgray"><br/><br/><br/></p>
-                    <a class="btn" href="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" onclick="trackOutboundLink('https://partner.lizhi.io/androiddevtools/cp', 'LiZhi-Button', 'click');" title="">去领劵</a>
+                    <a class="btn" href="https://www.androiddevtools/ad/lizhi-618.html?utm_source=androiddevtools.cn&amp;utm_medium=banner" onclick="trackOutboundLink('https://partner.lizhi.io/androiddevtools/cp', 'LiZhi-Button', 'click');" title="">去领劵</a>
                 </div>
             </li>
             <!-- <li class="hide" style="background-image: url(https://i.loli.net/2019/05/10/5cd4dfb5f1a74.png); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
