add android studio 3.5 rc3

--- a/index.html
+++ b/index.html
@@ -307,6 +307,57 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.5 RC3 -->
+                            <tr>
+                                <td rowspan="7">3.5 RC3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.5.0.18/android-studio-ide-191.5763348-windows.exe">android-studio-ide-191.5763348-windows.exe</a>
+                                </td>
+                                <td>745202424 bytes</td>
+                                <td>a15cacde7c178ee11bcf1bc50217b4fe0c6a75dda8a80896a411b6c66cd5e63f</td>
+                                <td rowspan="6"><a href="">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.18/android-studio-ide-191.5763348-windows.zip">android-studio-ide-191.5763348-windows.zip</a>
+                                </td>
+                                <td>758580617 bytes</td>
+                                <td>acb7a32d07f6aab69f35c83cfeb0f9ba7272f38e52c7fa9a9e7702b1a11f1a62</td>
+                            </tr>
+                            <tr>
+                                <td>Window (32-bit)</td>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.18/android-studio-ide-191.5763348-windows32.zip">android-studio-ide-191.5763348-windows32.zip</a>
+                                </td>
+                                <td>758043782 bytes</td>
+                                <td>a7b4f1d9e0d555e2570d1be6a56c050128959edb09dfabe210c169d12e2ce825</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.5.0.18/android-studio-ide-191.5763348-mac.zip">android-studio-ide-191.5763348-mac.zip</a>
+                                </td>
+                                <td>758998170 bytes</td>
+                                <td>93aeecbc5980a4e931e7d2aee02ea62aa0fea2898a3cea17238f30af8cd03f84</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.18/android-studio-ide-191.5763348-linux.tar.gz">android-studio-ide-191.5763348-linux.tar.gz</a>
+                                </td>
+                                <td>765044213 bytes</td>
+                                <td>b254efe38bc04f5918e01add23d834e9c65ae5f537fb8d68297f4bdc0270850d</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.5.0.18/android-studio-ide-191.5763348-cros.deb">android-studio-ide-191.5763348-cros.deb</a>
+                                </td>
+                                <td>644190332 bytes</td>
+                                <td>78a4226e97e91f8750b44c6260ecbae63dab905b2bd6c08991a4c29ad38b3524</td>
+                            </tr>
                             <!-- 3.5 RC2 -->
                             <tr>
                                 <td rowspan="7">3.5 RC2</td>
@@ -337,7 +388,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/install/3.5.0.18/android-studio-ide-191.5763348-mac.dmg">android-studio-ide-191.5763348-mac.dmg</a>
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.5.0.18/android-studio-ide-191.5763348-mac.zip">android-studio-ide-191.5763348-mac.zip</a>
                                 </td>
                                 <td>758989743 bytes</td>
                                 <td>1e5176fae8f93784c6f22e729fee572f90109adf7b93c1652b2574ddc6877fc0</td>
@@ -388,7 +439,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/install/3.5.0.18/android-studio-ide-191.5717577-mac.dmg">android-studio-ide-191.5717577-mac.dmg</a>
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.5.0.18/android-studio-ide-191.5717577-mac.zip">android-studio-ide-191.5717577-mac.zip</a>
                                 </td>
                                 <td>768812325 bytes</td>
                                 <td>fb68915c272428804f3eacc220116e7288d44770f36246cdb26c0f7d1123f6a0</td>
@@ -439,7 +490,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/install/3.6.0.5/android-studio-ide-191.5721125-mac.dmg">android-studio-ide-191.5721125-mac.dmg</a>
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.6.0.5/android-studio-ide-191.5721125-mac.zip">android-studio-ide-191.5721125-mac.zip</a>
                                 </td>
                                 <td>776438552 bytes</td>
                                 <td>6736334d4642d97557502565bf9024988bfa44e81ccec601d358d82b6702294c</td>
@@ -691,7 +742,6 @@
                                 <td>655054516 bytes</td>
                                 <td>485a6af8a6fa13d43be15681d0b5e1110fb68b4c7fdfe5bdfff2dec1c4139163</td>
                             </tr>
-
                             <!-- 3.4.1 正式版 -->
                             <tr>
                                 <td rowspan="6">3.4.1 正式版</td>
