add tecentcloud 1111 ad info

--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
                 <img src="https://i.loli.net/2019/05/23/5ce663bb003ec62326.gif" style="height: 313.5px; width: 192.5px;">
             </a>
         </div>
+        <div class="ad-float-right">
+            <a href="http://1t.click/aBcQ" title="助力产业智慧升级，云服务器首年88元起，更有千元代金券礼包免费领！" onclick="trackOutboundLink('http://1t.click/aBcQ', 'AD-RIGHT-TencentCloud-1111-2019', 'click');" target="_blank">
+                <img src="https://tva1.sinaimg.cn/large/006y8mN6ly1g7z1oqrqwqj306y0a0gn9.jpg" style="height: 313.5px; width: 192.5px;">
+            </a>
+        </div>
     </div>
 
     <div class="banner has-dots" id="ad-banner-list">
@@ -255,9 +260,9 @@
         <div class="container body-container">
             <div class="row">
                 <div>
-                    <p class="hide">
-                        <a href="http://t.cn/E25gpMj" title="亚马逊冬之读宴精选好书满 200 元减 50元" onclick="trackOutboundLink('http://t.cn/E25gpMj', 'AD-AMZ-Books-200-50', 'click');" target="_blank">
-                            <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb57sm7y0j315o08cmyt.jpg">
+                    <p class="center">
+                        <a href="http://1t.click/aBcQ" title="助力产业智慧升级，云服务器首年88元起，更有千元代金券礼包免费领！" onclick="trackOutboundLink('http://1t.click/aBcQ', 'AD-TencentCloud-1111-2019', 'click');" target="_blank">
+                            <img src="https://i.loli.net/2019/10/15/8NojldgUEmpYFyu.jpg">
                         </a>
                     </p>
                     <h1 id="introduction" class="content-title" algin="center">AndroidDevTools</h1>
