--- a/index.html
+++ b/index.html
@@ -182,6 +182,45 @@
             </a>
         </div>
     </div>
+    <div class="pop">
+        <div class="pop-container">
+            <a class="pop-links" href="#" target="_blank">
+                <img class="pop-image" src=""/>
+            </a>
+            <h3 class="pop-text"></h3>
+            <span class="pop-btn-close"><svg t="1573004385562" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2029" width="32" height="32"><path d="M679.453315 383.633401c-0.409322-10.153244-4.200672-20.195971-11.954263-27.948539-7.751544-7.749498-17.767666-11.517311-27.947516-11.954263-11.301394-0.436952-22.709211 3.330862-31.335682 11.954263l-96.099708 96.127338-96.100732-96.127338c-8.625448-8.623401-20.034289-12.391215-31.333636-11.954263-10.152221 0.436952-20.195971 4.204765-27.948539 11.954263-7.752568 7.751544-11.544941 17.795295-11.954263 27.948539-0.464581 11.299347 3.327792 22.708188 11.954263 31.333636l96.099708 96.127338-96.099708 96.074126c-8.626471 8.625448-12.418844 20.034289-11.954263 31.333636 0.409322 10.152221 4.201695 20.195971 11.954263 27.948539 7.751544 7.751544 17.795295 11.57257 27.948539 11.95631 11.299347 0.490164 22.708188-3.330862 31.333636-11.95631l96.100732-96.073102 96.099708 96.073102c8.626471 8.625448 20.034289 12.44545 31.335682 11.95631 10.178827-0.38374 20.194948-4.203742 27.947516-11.95631 7.752568-7.751544 11.543917-17.796318 11.954263-27.948539 0.463558-11.299347-3.327792-22.708188-11.954263-31.333636l-96.099708-96.074126 96.099708-96.127338C676.125523 406.341588 679.916872 394.932748 679.453315 383.633401zM512.116145 63.916728c-246.953462 0-447.178669 200.227254-447.178669 447.178669 0 246.953462 200.225207 447.177646 447.178669 447.177646 246.953462 0 447.178669-200.224184 447.178669-447.177646C959.294814 264.143982 759.069607 63.916728 512.116145 63.916728zM512.116145 874.427426c-200.333678 0-363.332029-162.996305-363.332029-363.333052 0-200.333678 162.999374-363.333052 363.332029-363.333052s363.333052 162.999374 363.333052 363.333052C875.449197 711.431122 712.449823 874.427426 512.116145 874.427426z" p-id="2030" fill="#bfbfbf"></path></svg></span>
+        </div>
+    </div>
+    <style>
+        .pop {
+            height: 100%;
+            width: 100%;
+            position: fixed;
+            left: 0;
+            top: 0;
+            background-color: #000000AA;
+            text-align: center;
+            z-index: 100;
+            display: none;
+        }
+
+        .pop-container {
+            height: 80%;
+            margin-top: 10%;
+        }
+
+        .pop-links {
+            text-decoration: none;
+        }
+
+        .pop-image {
+            max-height: 70%;
+        }
+
+        .pop-text {
+            color: white;
+        }
+    </style>
     <section>
         <!-- Slider main container -->
         <div class="swiper-container">
@@ -5216,6 +5255,38 @@
     <script src="static/js/jquery.toTop.min.js"></script>
     <script src="static/js/google-analytics.js"></script>
     <script src="static/js/unslider.min.js"></script>
+
+    <!-- 顶层固定广告 -->
+    <script>
+        let image = $('.pop-image');
+        let link = $('.pop-links');
+        let text = $('.pop-text');
+    
+        let index = Math.floor(Math.random() * 10);
+        console.log('index = ' + index);
+        if (index % 2 == 0){
+            image.attr('src', "https://i.loli.net/2019/11/06/wUQJ2EdhKqN5XWs.jpg");
+            link.attr('href', "http://gk.link/a/10am6?utm_source=androiddevtools.cn&utm_medium=fixed_ad");
+            text.text("前 Google 工程师带你学「设计模式」");
+        } else {
+            image.attr('src', "https://i.loli.net/2019/11/06/SQXtbdrDxAkynEz.jpg");
+            link.attr('href', "https://androidweekly.io?utm_source=androiddevtools.cn&utm_medium=fixed_ad");
+            text.text("扫码关注「Android开发技术周报」公众号");
+        }
+        var currentTime = new Date().getTime();
+        if (localStorage.hideExpiredTime == null || localStorage.hideExpiredTime == undefined || localStorage.hideExpiredTime == ''){
+          localStorage.hideExpiredTime = 0;
+        }
+        if (currentTime - localStorage.hideExpiredTime > 120000000){
+          $('.pop').show();
+        }
+        $(document).ready(function(){
+            $('.pop-btn-close').click(function(){
+                localStorage.hideExpiredTime = currentTime;
+                $('.pop').hide();
+            })
+        })
+    </script>
     <!--   浮动广告      -->
     <script>
         var lastScrollY = 0;
@@ -5263,29 +5334,13 @@
             var redirectTriggered = false;
             ga('send', 'event', category, action, url, {
                 'hitCallback': function() {
-                    redirectTriggered = true;
-                    window.open(url);
+                    redirectTriggered = false;
+                    window.open(url, '_blank');
                 }
             });
         };
     </script>
     <!-- End Google Analytics -->
-    <script>
-        $(function() {
-            // $('.unslider-fade').unslider({ animation: 'fade', autoplay: true, arrows: false, nav: false});
-            // $('.unslider-fade').unslider({ arrows: false, fluid: true, dots: true});
-            if (window.chrome) {
-                $('.banner li').css('background-size', '100% 100%');
-            }
-
-            $('.banner').unslider({
-                speed: 2000,
-                arrows: false,
-                fluid: true,
-                dots: true
-            });
-        });
-    </script>
     <script>
         $(function() {
             $('.zh-backtotop').toTop();
