--- a/index.html
+++ b/index.html
@@ -5396,7 +5396,7 @@
         if (index % 2 == 0){
             image.attr('src', "https://i.loli.net/2019/11/06/wUQJ2EdhKqN5XWs.jpg");
             link.attr('href', "http://gk.link/a/10am6?utm_source=androiddevtools.cn&utm_medium=fixed_ad");
-            text.text("前 Google 工程师带你学「设计模式」");
+            text.text("🎉🎉优惠还有 2 天时间，使用优惠口令 521design/wangzheng 可以再优惠 15 元");
         } else {
             image.attr('src', "https://i.loli.net/2019/11/06/SQXtbdrDxAkynEz.jpg");
             link.attr('href', "https://androidweekly.io?utm_source=androiddevtools.cn&utm_medium=fixed_ad");
