replace geektime ad info

--- a/index.html
+++ b/index.html
@@ -5547,9 +5547,9 @@
         let index = Math.floor(Math.random() * 10);
         console.log('index = ' + index);
         if (index % 2 == 0){
-            image.attr('src', "https://i.loli.net/2019/11/06/wUQJ2EdhKqN5XWs.jpg");
+            image.attr('src', "https://i.loli.net/2019/11/24/7x31a8fM5g6k9Yv.jpg");
             link.attr('href', "http://gk.link/a/10am6?utm_source=androiddevtools.cn&utm_medium=fixed_ad");
-            text.text("🎉🎉优惠还有 2 天时间，使用优惠口令 521design/wangzheng 可以再优惠 15 元");
+            text.text("学生认证立享特权，课程一律 5 折");
         } else {
             image.attr('src', "https://i.loli.net/2019/11/06/SQXtbdrDxAkynEz.jpg");
             link.attr('href', "https://androidweekly.io?utm_source=androiddevtools.cn&utm_medium=fixed_ad");
