add adnroid studio 4.0 canary8 links

--- a/index.html
+++ b/index.html
@@ -324,6 +324,57 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.0 Canary8 -->
+                            <tr>
+                                <td rowspan="7">4.0 Canary8</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/4.0.0.5/android-studio-ide-193.6107147-windows.exe">android-studio-ide-193.6107147-windows.exe</a>
+                                </td>
+                                <td>879957808 bytes</td>
+                                <td>f6a36a0c829cf99735ee7d1be9400982503b81f1354154feca12957fac60cac9</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/006tNbRwly1gasr5dbvi3j30mt0ca0td.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/4.0.0.5/android-studio-ide-193.6107147-windows.zip">android-studio-ide-193.6107147-windows.zip</a>
+                                </td>
+                                <td>878533051 bytes</td>
+                                <td>205161505313eb1b2e7cae2380f44e73873b30e66bb3fc2ba1107a8ff2401ec8</td>
+                            </tr>
+                            <tr>
+                                <td>Window (32-bit)</td>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/4.0.0.5/android-studio-ide-193.6107147-windows32.zip">android-studio-ide-193.6107147-windows32.zip</a>
+                                </td>
+                                <td>845714918 bytes</td>
+                                <td>f85c130bf52edfe76c3f93b2302ed7c5a1deaae494f52fd152487d230e2aded7</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/4.0.0.5/android-studio-ide-193.6107147-mac.zip">android-studio-ide-193.6107147-mac.zip</a>
+                                </td>
+                                <td>893245490 bytes</td>
+                                <td>4836c543a1b14f76dfcd27eac36dca2fdce02d10e2722fa315f0929fe9359677</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/4.0.0.5/android-studio-ide-193.6107147-linux.tar.gz">android-studio-ide-193.6107147-linux.tar.gz</a>
+                                </td>
+                                <td>908350561 bytes</td>
+                                <td>1827a9ee3beb724fb4365b1811f7f9e1d7de4f31e91a9300f4544a51ae5cb12d</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/4.0.0.5/android-studio-ide-193.6107147-cros.deb">android-studio-ide-193.6107147-cros.deb</a>
+                                </td>
+                                <td>756911812 bytes</td>
+                                <td>a396db7402d052fd414810af7bdecd2112d329f151462aa7a1adb9d77d5a3bbe</td>
+                            </tr>
                             <!-- 4.0 Canary7 -->
                             <tr>
                                 <td rowspan="7">4.0 Canary7</td>
