add addthis share button bar

--- a/index.html
+++ b/index.html
@@ -6414,6 +6414,7 @@
         initBookList();
         addBannerItemClickEvent();
     </script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e313f50a3c838b7"></script>
 </body>
 
 </html>
