replace bitcoin address

--- a/donate.html
+++ b/donate.html
@@ -190,7 +190,11 @@
                 </div>
                 <div class="donate-method-qr">
                     <h4 id="wechat" class="donate-method-title">比特币</h4>
-                    <img class="donate-method-qr-img" src="./static/image/bitcoin_pay_qrcode.png" />
+                    <img class="donate-method-qr-img" src="https://i.loli.net/2020/02/21/fPyzhV2bi7mqECZ.jpg" />
+                </div>
+                <div class="donate-method-qr">
+                    <h4 id="wechat" class="donate-method-title">以太坊</h4>
+                    <img class="donate-method-qr-img" src="https://i.loli.net/2020/02/21/mAqknpQ3TZHC7Xs.jpg" />
                 </div>
             </div>
             <!-- 捐赠列表 -->
