add geektime ad info

--- a/index.html
+++ b/index.html
@@ -5648,9 +5648,10 @@
         let adArray = [
             {
                 "title": "学生认证立享特权，课程一律 5 折",
-                "link": "http://gk.link/a/10am6?utm_source=androiddevtools.cn&utm_medium=fixed_ad",
-                "image": "https://i.loli.net/2019/11/24/7x31a8fM5g6k9Yv.jpg"
-            },{
+                "link": "http://gk.link/a/10ga3?utm_source=androiddevtools.cn&utm_medium=fixed_ad",
+                "image": "https://i.loli.net/2020/02/24/L65vDBcAF8oIwW7.jpg"
+            },
+            {
                 "title": "扫码关注「Android开发技术周报」公众号",
                 "link": "ttps://androidweekly.io?utm_source=androiddevtools.cn&utm_medium=fixed_ad",
                 "image": "https://i.loli.net/2019/11/06/SQXtbdrDxAkynEz.jpg"
